main-app-writer/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-writer-svc
spec:
  type: ClusterIP
  selector:
    app: main-app-writer
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8080
